<resources>
    <string name="app_name">ZOHR-GATE</string>
    <string name="txt_cd" />


    <!-- Dialog message -->
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_setting">Settings</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="no_internet_msg">This feature requires internet connection. Please check your internet settings and try again.</string>
    <string name="no_internet_msg_main">This Application required internet connection. Please check your internet setting and try again.</string>
    <string name="no_internet_title">No internet</string>
    <string name="unauthorized_access">Unauthorized access</string>
    <string name="select_contact">Select Contact</string>
    <string name="search">Search</string>
    <string name="invite_type">Invite Type</string>
    <string name="venue">Venue</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="txt_under_dev">Under Development</string>
    <string name="txt_hint_username">Username</string>
    <string name="notification_error_ssl_cert_invalid">You are accessing a page with an
        untrusted or invalid certificate. Do you want to continue?</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="guest">Guest</string>
    <string name="staff">Staff</string>
    <string name="submit">Submit</string>
    <string name="guest_name">Guest Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="host_name">Host Name</string>
    <string name="flat_number">Flat Number</string>
    <string name="scan_vehicle">Scan Vehicle</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="enter_pass_code">Enter Pass code</string>
    <string name="emergency">Emergency</string>
    <string name="txt_get_details">Get Details</string>
    <string name="user_login">USER LOGIN</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="sign_in_caps">SIGN IN</string>
    <string name="forgot_password">Forgot password</string>
    <string name="resident_contact">Resident Contact</string>
    <string name="vehicle_umber">Vehicle Number</string>
    <string name="email">Email</string>
    <string name="count">Count</string>
    <string name="event_type">Event Type</string>
    <string name="resident_name">Resident Name</string>
    <string name="resident_details">Resident Details</string>
    <string name="visitor_details">Visitor Details</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="visitor_contact">Visitor Contact</string>
    <string name="visitor_name">Visitor Name</string>
    <string name="passcode">Passcode</string>
    <string name="please_enter_pass_code">Please enter pass code</string>
    <string name="please_enter_visitor_name">Please enter visitor name</string>
    <string name="please_enter_visitor_contact">Please enter visitor contact</string>
    <string name="please_select_vehicle_type">Please select vehicle type</string>
    <string name="please_select_resident_name">Please enter resident name</string>
    <string name="please_select_event_type">Please select event type</string>
    <string name="please_enter_count">Please enter count</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_vehicle_number">Please enter vehicle number</string>
    <string name="please_enter_resident_contact">Please enter resident contact</string>


    <string name="rfid_number">RFID Number</string>
    <string name="reading_rfid_data">Reading RFID Data</string>
    <string name="invite_search">Invite Search</string>
    <string name="guest_contact">Guest Contact</string>
    <string name="visitors">VISITORS</string>


    //icons

    <string name="flat_icon">&#xf1ad;</string>
    <string name="lock_icon">&#xf084;</string>
    <string name="user_icon">&#xf007;</string>
    <string name="phone_icon">&#xf098;</string>
    <string name="camera_icon">&#xf030;</string>
    <string name="barcode_icon">&#xf02a;</string>
    <string name="close_icon">&#xE5CD;</string>

    <string name="flat_number_new">Flat Number</string>
    <string name="resident_ph_no">Resident Ph no</string>
    <string name="guest_ph_no">Guest Ph no</string>
    <string name="guent_name">Guent Name</string>
    <string name="password">Password</string>
    <string name="swipe_your_card_here">Swipe Your Card Here</string>

    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="logout">Logout</string>

    <string name="empty">empty</string>
</resources>
