<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/toolbr_bg"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_2dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_in"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangel_drawble"
                android:gravity="center"
                android:text="@string/in"
                android:textColor="@color/white"
                android:textSize="@dimen/_28sp" />

            <TextView
                android:id="@+id/tv_out"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5dp"
                android:layout_weight="1"
                android:background="@drawable/rectangel_drawble"
                android:gravity="center"
                android:text="@string/out"
                android:textColor="@color/white"
                android:textSize="@dimen/_28sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_emergency"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangel_drawble"
            android:gravity="center"
            android:text="@string/emergency"
            android:textColor="@color/white"
            android:textSize="@dimen/_28sp" />
    </LinearLayout>
</LinearLayout>
