<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    tools:context=".activities.DashboardActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbr_bg"
            android:orientation="horizontal"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">


        <RelativeLayout
            android:id="@+id/rl_in"
            android:layout_width="@dimen/_0dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/rectangel_drawble"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/in"
                android:textColor="@color/white"
                android:textSize="@dimen/_28sp"  />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_out"
            android:layout_width="@dimen/_0dp"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginRight="2.5dp"
            android:background="@drawable/rectangel_drawble"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/out"
                android:textColor="@color/white"
                android:textSize="@dimen/_28sp" />

        </RelativeLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
